# openshift-ai-prompt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.git-lfs  Dockerfile.openjourney  Dockerfile.server  Dockerfile.ui
common/: Cargo.toml
common/src/: models.rs  ws.rs
manifests/: 01-namespace.yaml  02-imagestream.yaml  03-deployment.yaml  03-secret.yaml  04-deployment.yaml  04-service.yaml  05-route.yaml  07-rbac.yaml  08-buildconfig.yaml  09-machineconfig.yaml  09-model-initializer.yaml
openjourney/: init.py  requirements.txt  run.py
server/: Cargo.toml
server/src/: k8s_job.rs  main.rs  ws.rs
src/: app.rs  generate.rs  main.rs  progress.rs  searchbar.rs  text_input.rs
src/components/: mod.rs  searchbar.rs
ui/: Cargo.toml  index.html  nginx.conf
ui/src/: app.rs  generate.rs
ui/src/components/: picture.rs  progress.rs  searchbar.rs
