[package]
name = "openshift-ai-prompt"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vadim@vrutkovs.eu>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
yew = {version="0.21", features = ["csr"]}
gloo = "0.11"
instant = { version = "0.1", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
