[workspace]
resolver = "2"
members = [ "common", "server","ui"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[patch.crates-io]
patternfly-yew = { git = "https://github.com/patternfly-yew/patternfly-yew", rev = "ac5c244b9f7deac9d1dc286da8ab33e4cc21b5f1" } # FIXME: awaiting release
