[package]
name = "openshift-ai-prompt-server"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vadim@vrutkovs.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.21.0"
tokio = { version = "1.36.0", default-features = false, features = ["io-util", "macros", "rt-multi-thread", "time"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
log = "0.4.21"
env_logger = "0.11.3"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.71"
rand = "0.8.5"
envconfig = "0.10.0"
