[package]
name = "openshift-ai-prompt"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vadim@vrutkovs.eu>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
yew = {version="0.21", features = ["csr"]}
gloo = "0.11"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent", "Location"] }
futures = "0.3.30"
reqwasm = "0.5.0"
openshift-ai-prompt-common = {path="../common"}
anyhow = "1.0.71"
patternfly-yew = { version = "0.5.6", features = ["tree", "icons-fab"] }
enum-iterator = "2.0.0"
